# django-heroku-connect

./: .bandit  .checks.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: Makefile  checks.rst  commands.rst  conf.py  contrib.rst  error_handling.rst  exceptions.rst  fields.rst  health_check.rst  index.rst  make.bat  models.rst  quick_start.rst  router.rst  settings.rst  spelling_wordlist.txt  test.rst  tests.rst  utils.rst
heroku_connect/: __init__.py  admin.py  apps.py  checks.py  conf.py  errors.py  models.py  pytest_plugin.py  utils.py
heroku_connect/contrib/: health_check.py
heroku_connect/contrib/heroku_connect_health_check/: __init__.py  apps.py  backends.py
heroku_connect/db/: exceptions.py  router.py
heroku_connect/db/backends/base/: base.py  creation.py
heroku_connect/db/backends/postgis/: base.py
heroku_connect/db/backends/postgresql/: base.py  creation.py
heroku_connect/db/models/: __init__.py  base.py  errors.py  fields.py  related.py  triggerlog.py
heroku_connect/management/commands/: create_development_schema.py  import_mappings.py  load_remote_schema.py  makemappings.py
heroku_connect/migrations/: 0001_initial.py
heroku_connect/models/: __init__.py  base.py  fields.py
heroku_connect/test/: __init__.py  utils.py
heroku_connect/tests/: utils.py
tests/: conftest.py  fixtures.py  test_admin.py  test_checks.py  test_errors.py  test_models.py  test_triggerlog.py  test_utils.py
tests/commands/: test_create_development_schema.py  test_import_mappings.py  test_load_remote_schema.py  test_makemappings.py
tests/contrib/: test_healthcheck.py
tests/db/: test_backends.py
tests/db/models/: conftest.py  test_base.py  test_errors.py  test_fields.py  test_related.py  test_triggerlog.py
tests/models/: test_base.py  test_fields.py
tests/test/: test_utils.py
tests/testapp/: manage.py  models.py  settings.py  test_models.py  urls.py
tests/tests/: test_utils.py
