[metadata]
name = django-heroku-connect
author = Thermondo GmbH
author-email = opensource@thermondo.de
summary = Django integration Salesforce using Heroku Connect.
description-file = README.rst
home-page = https://github.com/Thermondo/django-heroku-connect
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Django
keywords =
    heroku
    salesforce
    django

[files]
packages =
    heroku_connect
    
[pbr]
skip_authors = true
skip_changelog = true

[build_sphinx]
source-dir = docs
build-dir = docs/_build
warning-is-error = 1

[tool:pytest]
norecursedirs = env .tox .eggs
addopts = --tb=short -rxs --nomigrations
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[pycodestyle]
max-line-length = 99
statistics = true
show-source = true

[pydocstyle]
match-dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py
add_ignore = D1

[isort]
atomic = true
multi_line_output = 5
line_length = 99
skip = manage.py,docs,env,.tox,.eggs
known_first_party = heroku_connect,tests
known_third_party = django,pytest,health_check
default_section=THIRDPARTY
combine_as_imports = true
