[metadata]
name = django-heroku-connect
author = Thermondo GmbH
author-email = opensource@thermondo.de
summary = Django integration Salesforce using Heroku Connect.
description-file = README.rst
home-page = https://github.com/Thermondo/django-heroku-connect
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Django
keywords =
    heroku
    salesforce
    django

[files]
packages =
    heroku_connect

[options.entry_points]
pytest11 =
    heroku_connect = heroku_connect.pytest_plugin

[pbr]
skip_authors = true
skip_changelog = true

[build_sphinx]
source-dir = docs
build-dir = docs/_build
warning-is-error = 1

[tool:pytest]
norecursedirs = env .eggs
addopts = --tb=short -rxs --nomigrations
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501, F405

[pydocstyle]
match-dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py
add_ignore = D1

[isort]
profile = black
skip = manage.py,docs,env,.eggs
known_first_party = heroku_connect,tests
known_third_party = django,pytest,health_check
default_section=THIRDPARTY
